chunks, sorts and filters fixed in UI

--- a/src/main/resources/templates/campaign-details.html
+++ b/src/main/resources/templates/campaign-details.html
@@ -363,7 +363,7 @@
                     </div>
                 </div>
 
-                <!-- Update informations form -->
+                <!-- Update information form -->
                 <div id="campaign-info-update" class="collapse">
                     <div class="address-container">
                         <div class="billingAddress">
