--- a/src/main/resources/templates/payment.html
+++ b/src/main/resources/templates/payment.html
@@ -253,13 +253,13 @@
                             <ul class="nav bg-light nav-pills rounded nav-fill mb-3" role="tablist">
                                 <li class="nav-item col-md-4 p-all-0">
                                     <a class="nav-link active accent-color" data-toggle="pill" href="#nav-tab-card">
-                                        <i class="fa fa-credit-card"></i> Bank-Credit-PTT Card</a></li>
+                                        <i class="tab_icons fa fa-credit-card"></i> Bank-Credit-PTT Card</a></li>
                                 <li class="nav-item col-md-4 p-all-0">
                                     <a class="nav-link accent-color" data-toggle="pill" href="#nav-tab-paypal">
-                                        <i class="fa fa-paypal"></i> PayPal</a></li>
+                                        <i class="tab_icons fa fa-paypal"></i> PayPal</a></li>
                                 <li class="nav-item col-md-4 p-all-0">
                                     <a class="nav-link accent-color" data-toggle="pill" href="#nav-tab-bank">
-                                        <i class="fa fa-university"></i> Bank Transfer</a></li>
+                                        <i class="tab_icons fa fa-university"></i> Bank Transfer</a></li>
                             </ul>
 
                             <div class="tab-content">
@@ -280,8 +280,8 @@
                                                        name="card-number" required="" th:field="*{cardNumber}">
                                                 <div class="input-group-append">
                                                         <span class="input-group-text text-muted">
-                                                            <i class="fa fa-cc-visa"></i>   <i
-                                                                class="fa fa-cc-amex"></i>  
+                                                            <i class="fa fa-cc-visa"></i>   <i
+                                                                class="fa fa-cc-amex"></i>
                                                             <i class="fa fa-cc-mastercard"></i>
                                                         </span>
                                                 </div>
