Add confirm click js file and product details delete button example

--- a/src/main/resources/templates/product-details.html
+++ b/src/main/resources/templates/product-details.html
@@ -293,9 +293,13 @@
                                                             style="font-size: 25px; padding-right: 10px"
                                                             class="fa fa-pencil"></i></a>
                                                     <!-- Delete button -->
-                                                    <a href="#" class="trans_200" data-toggle="collapse"><i
+                                                    <button type="submit" value="&#xf014;"
+                                                            class="trans_200 fa product_text"
                                                             style="font-size: 25px; color: #4a4a4a"
-                                                            class="fa product_text">&#xf014;</i></a>
+                                                            data-toggle="collapse"
+                                                            onclick="confirmClick();">
+                                                        &#xf014;
+                                                    </button>
                                                 </div>
                                             </div>
                                         </div>
@@ -3324,7 +3328,7 @@
 <script src="js/checkout.js"></script>
 <script src="js/login.js"></script>
 <script src="js/admin-panel.js"></script>
-
+<script src="js/confirm.js"></script>
 </body>
 
 </html>
